Changed hover effects of the icons, changed the logo font added personal tag and fixed resizing issue with project tile

--- a/public/index.html
+++ b/public/index.html
@@ -26,10 +26,7 @@
       href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;500&display=swap"
       rel="stylesheet"
     />
-    <link 
-      href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" 
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Caprasimo&display=swap" rel="stylesheet">
     <script
       src="https://kit.fontawesome.com/a388be2306.js"
       crossorigin="anonymous"
