--- a/public/index.html
+++ b/public/index.html
@@ -27,11 +27,11 @@
       rel="stylesheet"
     />
     <link href="https://fonts.googleapis.com/css2?family=Caprasimo&display=swap" rel="stylesheet">
-    <script
+    <!-- <script
       src="https://kit.fontawesome.com/a388be2306.js"
       crossorigin="anonymous"
       defer="defer"
-    ></script>
+    ></script> -->
     <title>Aswin Shailajan</title>
   </head>
   <body>
